Added attachment parameters and improved parsing.